Fixed alignment of display content

--- a/app/assets/stylesheets/common/_url_viewer.scss
+++ b/app/assets/stylesheets/common/_url_viewer.scss
@@ -3,6 +3,8 @@
   flex-flow: column wrap;
   height: 595px;
   width: inherit;
+  display: flex;
+  flex-flow: column wrap;
 }
 
 .url-display {
